[package]
name = "scheme-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp32-hal = "0.15.0"
esp-println = { version = "0.9.0", features = ["esp32", "log"] }
esp-alloc = { version = "0.3.0" }

display-interface-spi = "0.4.1"
embedded-hal = "0.2.7"
embedded-graphics = "0.8.0"
mipidsi = "0.7.1"
axp192 = "0.1.1"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
